# eip712-rs

./: Cargo.toml  README.md  demo.sol  output.sol  test.sol
examples/: example-fns.sol  example-types.sol
src/: codegen.rs  main.rs  tests.rs  types.rs  utils.rs  verify.rs
